hphp/hack/test/typecheck/goto/goto_invalid_label.php
<?hh // partial

function test(): void {
  goto 1 + 1;
}
